# -34.12-2018

./: .gitignore
encryption_and_decryption/: CMakeLists.txt  MainFrame.cpp  main.cpp  tests_for_prj.cpp
encryption_and_decryption/classes/: App.h  IMsgBox.h  MainFrame.h  MockMsgBox.h  RealMsgBox.h
encryption_and_decryption/classes_sources/: MainFrame.cpp  RealMsgBox.cpp
encryption_and_decryption/documentation/html/: _app_8h.html  _app_8h_source.html  _i_msg_box_8h.html  _i_msg_box_8h_source.html  _main_frame_8h.html  _main_frame_8h_source.html  _mock_msg_box_8h.html  _mock_msg_box_8h_source.html  _real_msg_box_8h.html  _real_msg_box_8h_source.html  annotated.html  class_app-members.html  class_app.html  class_i_msg_box-members.html  class_i_msg_box.html  class_main_frame-members.html  class_main_frame.html  class_mock_msg_box-members.html  class_mock_msg_box.html  class_real_msg_box-members.html  class_real_msg_box.html  classes.html  dir_7a0ae24931cc9720f9bf7b458969cad4.html  dir_b02e4219757ae4e3a0f1714873865bbf.html  dir_cd962b7ebd77578f5fb4b55438b2d6ce.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  index.html  support__functions_8h.html  support__functions_8h_source.html
encryption_and_decryption/files/: c++.cpp  file.txt
encryption_and_decryption/helpinfo/: helpinfo.txt
encryption_and_decryption/keys/: key1.txt  key2.txt
encryption_and_decryption/support_functions/: CMakeLists.txt
encryption_and_decryption/support_functions/include/: support_functions.h
encryption_and_decryption/support_functions/src/: CMakeLists.txt  G_conversion.cpp  decryption_or_encryption_whole_file.cpp  encryption_one_block.cpp  key_gen.cpp  table_conversion.cpp  validation.cpp
encryption_and_decryption/test_folder/input_files/: input_file_3.txt
encryption_and_decryption/test_sources/: tests_for_prj.cpp
encryption_one_block/: CMakeLists.txt  (+1 more)
(+31 files in other folders)
