cmake_minimum_required(VERSION 3.20)
project(magma)
set(wxBUILD_SHARED OFF)
add_subdirectory(wxWidgets-3.2.5)
add_subdirectory(support_functions/src support_functions)
include_directories(support_functions/include classes)
add_executable(main main.cpp MainFrame.cpp)
target_link_libraries(main support_functions)
target_link_libraries(main wx::net wx::core wx::base)
add_executable(tests_for_prj tests_for_prj.cpp)
target_link_libraries(tests_for_prj  support_functions)
enable_testing()
add_test(NAME func_test COMMAND func_test --force--colors -d)